Fixing the overflow for the header logo.

--- a/css/header.css
+++ b/css/header.css
@@ -39,7 +39,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .centre-piece img {
